# nakagai-edge

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/connect-edge/: SKILL.md
.claude/skills/pair-agent/: SKILL.md
.claude/skills/verify-edge/: SKILL.md
.github/workflows/: ci.yml
nakagai_edge/: __init__.py  _env.py  approvals.py  auth.py  cli.py  config.py  guardrails.py  hub.py  identity.py  oauth_login.py  signing.py  slug.py
nakagai_edge/edge/: __init__.py  audit.py  client.py  executor.py  portfolio.py  preflight.py  remote.py  runtime.py  setup.py  state.py  sync.py
tests/: test_edge_channel.py  test_edge_checkin.py  test_edge_cli.py  test_edge_client.py  test_edge_executor.py  test_edge_identity.py  test_edge_portfolio.py  test_edge_preflight.py  test_edge_report.py  test_edge_runtime.py  test_edge_runtime_portfolio.py  test_edge_setup_cli.py  test_edge_setup_plan.py  test_edge_sync.py  test_import_closure.py  test_package_shape.py
tests/fixtures/: echo_mcp.py
