[project]
name = "nakagai-edge"
version = "0.1.0"
description = "Nakagai edge: the connector runtime that holds your broker credentials"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9",
    "cryptography>=42",
    "httpx>=0.27",
    "pyyaml>=6",
]

[project.urls]
Homepage = "https://nakag.ai"
Repository = "https://github.com/loubylabs/nakagai-edge"

[project.scripts]
nakagai-edge = "nakagai_edge.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nakagai_edge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
